"apply as filter" doesn't work for content of an PPP IPCP packet
This issue was migrated from bug 1023 in our old bug tracker.
Original bug information:
Reporter: Toralf Förster
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Linux
Platform: x86
Version: Git
Attachments:
ppp_ipcp_config_ack.pcap: ppp packet
proto.c.diff: This patch should hopefully fix the problem (I'm not in a position to check this in at the moment)