Fix for bug 1023 (problem with 'apply as filter' strings)

svn path=/trunk/; revision=18817