epan/proto.c
@@ -5291,8 +5291,6 @@ proto_construct_dfilter_string(field_info *finfo, epan_dissect_t *edt)
 			break;
 
 		case FT_PROTOCOL:
-		case FT_NONE:
-			/* Just want to test for the presence of these */
 			buf = ep_strdup(finfo->hfinfo->abbrev);
 			break;
 
@@ -5322,13 +5320,18 @@ proto_construct_dfilter_string(field_info *finfo, epan_dissect_t *edt)
 				return NULL;	/* you lose */
 
 			/*
-			 * If the length is 0, there's nothing to match, so
-			 * we can't match.  (Also check for negative values,
+			 * If the length is 0, just match the name of the field
+			 * (Also check for negative values,
 			 * just in case, as we'll cast it to an unsigned
 			 * value later.)
 			 */
 			length = finfo->length;
-			if (length <= 0)
+			if (length == 0)
+			{
+				buf = ep_strdup(finfo->hfinfo->abbrev);
+				break;
+			}
+			if (length < 0)
 				return NULL;
 
 			/*
